--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,16 +3,14 @@
     display: grid;
     grid-template-areas: "header header" "baner baner" "novedades novedades" "imgnovedades imgnovedades" "suplementos anabolicos" "suplementos entrenamientos" "nosotros nosotros" "contacto contacto" "comunidad comunidad";
     grid-template-columns: 50% 50%;
-    grid-template-rows: 40px 300px 200px 300px 200px 200px 400px 500px 500px 500px; }
+    grid-template-rows: 100px 300px 200px 300px 200px 200px 400px 600px 300px; }
   .header {
     grid-area: header;
     background-color: #444444;
     display: flex;
-    justify-content: space-evenly;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    box-shadow: 2px 2px 10px 2px black; }
+    flex-direction: column;
+    align-items: center;
+    text-align: center; }
   .banerBox {
     grid-area: baner;
     display: flex;
@@ -29,8 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
-    box-shadow: 2px 2px 10px 2px black; }
+    text-align: center; }
   .boxImg_novedades {
     grid-area: imgnovedades;
     background-image: url(../assets/img/pers.jpeg);
@@ -73,33 +70,42 @@
     grid-area: nosotros;
     background-color: #171717;
     display: flex;
-    justify-content: center;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    box-shadow: 2px 2px 10px 2px black; }
+    justify-content: center;
+    align-items: center; }
   .imgNosotros {
     display: none; }
   .boxContacto {
-    grid-area: contacto; }
+    grid-area: contacto;
+    background-color: #444444;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left; }
   .boxComunidad {
-    grid-area: comunidad; }
+    grid-area: comunidad;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: black; }
   /*FIN GRIDS--------------------------------------------------------*/
   .logo {
-    height: 100px;
-    width: 100px;
-    position: relative;
-    right: 40px;
-    top: 10px; }
-  .boxnav {
-    display: flex;
-    justify-content: space-around; }
+    height: 60px;
+    width: 60px;
+    position: relative; }
+  .box_nav {
+    display: flex; }
   .box_nav li {
     list-style: none;
-    position: relative;
-    font-size: 15px;
+    font-size: 13px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: bold; }
+    font-weight: bold;
+    padding: 0px 10px;
+    position: relative;
+    right: 20px;
+    bottom: 5px; }
   .box_nav li a {
     text-decoration: none;
     color: white; }
@@ -111,14 +117,16 @@
     font-style: italic;
     -webkit-text-stroke: 2px black;
     position: relative;
-    top: 50px; }
+    top: 20px; }
   .banerBox h2 {
     font-size: 30px;
     color: white;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
     font-style: italic;
-    -webkit-text-stroke: 2px black; }
+    -webkit-text-stroke: 2px black;
+    position: relative;
+    bottom: 15px; }
   .icono {
     display: none; }
   .novedades h3 {
@@ -139,13 +147,338 @@
   .boxSuplementos:hover {
     border: solid 5px white; }
   figcaption {
-    display: none;
-    transition: all .5s;
     font-size: 20px;
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.541);
+    font-style: italic; }
+  .boxQuimica:hover {
+    border: solid 3px #EEEEEE; }
+  .boxPersonalizados:hover {
+    border: solid 3px #EEEEEE; }
+  .titutlo_nosotros {
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    position: relative;
+    bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    right: 60px; }
+  .texto_nosotros {
+    color: white;
+    font-size: 13px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    position: relative;
+    width: 300px;
+    text-align: left;
+    bottom: 30px; }
+  .box_textos_contacto {
+    position: relative;
+    height: 300px;
+    width: 200px;
+    right: 50px; }
+  .text_contacto {
+    color: white;
+    font-size: 35px;
+    margin-bottom: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic; }
+  .text_contacto2 {
+    color: white;
+    font-size: 15px;
+    width: 400px;
+    position: relative;
+    margin-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
+    width: 200px; }
+  .text_contacto3 {
+    color: white;
+    font-size: 15px;
+    width: 200px;
+    position: relative;
+    margin-bottom: 3px;
+    font-family: 'Open Sans', sans-serif; }
+  .text_contacto4 {
+    color: white;
+    font-size: 15px;
+    width: 200px;
+    font-family: 'Open Sans', sans-serif; }
+  .input {
+    height: 20px;
+    width: 200px;
+    font-size: 15px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 10px;
+    text-align: left;
+    text-indent: 20px;
+    top: 20px; }
+  .textArea {
+    width: 202px;
+    font-size: 25px;
+    height: 75px;
+    text-align: center;
+    color: #706f6f;
+    bottom: 10px;
+    position: relative;
+    top: 20px; }
+  .boton {
+    height: 20px;
+    width: 50px;
+    border-radius: 0px;
+    border: 0px;
+    color: black;
+    font-size: 10px;
+    position: relative;
+    top: 20px;
+    left: 1px; }
+  .box_form {
+    position: relative;
+    right: 45px; }
+  .titulo_comunidad {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+    position: relative; }
+  .subtitulo_comunidad {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    bottom: 30px; }
+  .mail_comunidad {
+    width: 300px;
+    height: 30px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    position: relative;
+    bottom: 30px;
+    text-indent: 75px;
+    font-size: 15px; }
+  .unirse_comunidad {
+    width: 309px;
+    height: 30px;
+    border-radius: 0px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    color: white;
+    position: relative;
+    bottom: 20px;
+    font-size: 20px; } }
+
+@media (min-width: 1024px) {
+  * {
+    margin: 0px;
+    padding: 0px; }
+  .contenedor {
+    display: grid;
+    grid-template-areas: "header header header header header header" "baner baner baner baner baner baner " "novedades novedades novedades novedades2 novedades2 novedades2" "suplementos suplementos quimica quimica pers pers" "oferta oferta oferta oferta oferta oferta" "nosotros nosotros nosotros nosotros nosotros2 nosotros2" "contacto contacto contacto contacto contacto contacto" "comunidad comunidad comunidad comunidad comunidad comunidad";
+    grid-template-columns: repeat(6, 16.6666%);
+    grid-template-rows: 120px 850px 600px 450px 550px 500px 550px 500px; }
+  .header {
+    grid-area: header;
+    background-color: #444444de;
+    display: flex;
+    justify-content: space-evenly;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    box-shadow: 2px 2px 10px 2px black; }
+  .banerBox {
+    grid-area: baner;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    background-image: url(../assets/img/pesas3.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover; }
+  .logo {
+    height: 120px;
+    width: 120px;
+    position: relative;
+    right: 330px; }
+  .box_nav {
+    display: flex;
+    position: relative;
+    top: 50px;
+    left: 300px; }
+  .box_nav li {
+    list-style: none;
+    position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold; }
+  .box_nav li a {
+    text-decoration: none;
+    color: white; }
+  .box_nav li a:hover {
+    transition: all .3s;
+    color: orange; }
+  .novedades {
+    grid-area: novedades;
+    background-color: black;
+    border: solid 2px black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxImg_novedades {
+    grid-area: novedades2;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxSuplementos {
+    grid-area: suplementos;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxQuimica {
+    grid-area: quimica;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxPersonalizados {
+    grid-area: pers;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxOfertas {
+    grid-area: oferta;
+    background-color: #000000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; }
+  .boxNosotros {
+    grid-area: nosotros;
+    background-color: #171717;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    box-shadow: 2px 2px 10px 2px black; }
+  .imgNosotros {
+    grid-area: nosotros2;
+    background-image: url(../assets/img/cbum2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxContacto {
+    grid-area: contacto;
+    background-color: #444444;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 2px 2px 10px 2px black; }
+  .boxComunidad {
+    grid-area: comunidad;
+    background-color: #1B1A17;
+    box-shadow: 2px 2px 10px 2px black; }
+  /* fin grids */
+  .banerBox h1 {
+    font-size: 160px;
+    color: yellow;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    font-style: italic;
+    -webkit-text-stroke: 2px black; }
+  .banerBox h2 {
+    font-size: 60px;
+    color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    font-style: italic;
+    -webkit-text-stroke: 2px black; }
+  .icono {
+    height: 90px;
+    width: 90px;
+    position: relative;
+    top: 70px; }
+  .novedades h3 {
+    font-size: 70px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic; }
+  .novedades h4 a {
+    font-size: 40px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none; }
+  .novedades h4 a:hover {
+    color: #444444;
+    transition: .5s; }
+  .boxImg_novedades {
+    background-image: url(../assets/img/pers.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .boxSuplementos {
+    background-image: url(../assets/img/sup.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 100;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center; }
+  .boxSuplementos:hover {
+    border: solid 5px white; }
+  .boxSuplementos h3 {
+    font-size: 50px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold; }
+  .boxQuimica {
+    background-image: url(../assets/img/arnold.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; }
+  .boxPersonalizados {
+    background-image: url(../assets/img/img.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center; }
+  .boxOfertas h2 {
+    font-size: 50px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic;
+    position: relative;
+    bottom: 60px; }
+  .boxOfertas h3 {
+    font-size: 30px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    position: relative;
+    bottom: 60px;
+    text-decoration: underline; }
+  .wheyImg {
+    height: 200px;
+    width: 190px;
+    margin-left: 50px;
+    margin-right: 50px; }
+  .box_img_nov {
+    display: flex;
+    justify-content: space-evenly; }
+  .boxSuplementos:hover {
+    border: solid 3px #EEEEEE; }
+  figcaption {
+    display: none;
+    transition: all .5s;
+    font-size: 50px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.541);
+    margin-left: 100px;
+    margin-right: 100px;
     font-style: italic; }
   .boxSuplementos:hover > figcaption {
     display: block;
@@ -163,9 +496,27 @@
     display: block;
     transition: all .5s;
     cursor: pointer; }
+  .texto_ofertas {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    color: white;
+    width: 200px; }
+  .texto_ofertas:hover {
+    color: #424238;
+    cursor: pointer;
+    transition: all .3s; }
+  .box_texto_ofertas {
+    display: flex;
+    justify-content: space-evenly; }
+  .creatina_pos {
+    position: relative;
+    right: 23px; }
+  .scitec_pos {
+    position: relative;
+    left: 23px; }
   .titutlo_nosotros {
     color: white;
-    font-size: 35px;
+    font-size: 100px;
     font-weight: bold;
     position: relative;
     bottom: 20px;
@@ -173,10 +524,151 @@
     font-style: italic; }
   .texto_nosotros {
     color: white;
-    font-size: 13px;
+    font-size: 30px;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     position: relative;
-    width: 300px;
+    width: 1200px;
+    text-align: center;
+    left: 30px; }
+  .box_textos_contacto {
+    position: relative;
+    bottom: 25px;
+    left: 200px; }
+  .text_contacto {
+    color: white;
+    font-size: 60px;
+    margin-bottom: 18px;
+    font-family: 'Open Sans', sans-serif;
+    font-style: italic; }
+  .text_contacto2 {
+    color: white;
+    font-size: 25px;
+    width: 400px;
+    position: relative;
+    margin-bottom: 20px;
+    font-family: 'Open Sans', sans-serif; }
+  .text_contacto3 {
+    color: white;
+    font-size: 25px;
+    width: 400px;
+    position: relative;
+    margin-bottom: 3px;
+    font-family: 'Open Sans', sans-serif; }
+  .text_contacto4 {
+    color: white;
+    font-size: 25px;
+    width: 400px;
+    font-family: 'Open Sans', sans-serif; }
+  .input {
+    height: 40px;
+    width: 400px;
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 10px;
     text-align: left;
-    bottom: 30px; } }
+    text-indent: 20px; }
+  .input:hover {
+    cursor: pointer;
+    border: solid 1px black; }
+  .input {
+    height: 40px;
+    width: 400px;
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 10px;
+    text-align: left;
+    text-indent: 20px; }
+  .input {
+    height: 40px;
+    width: 400px;
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-bottom: 20px;
+    text-align: left;
+    text-indent: 20px; }
+  .textArea {
+    width: 402px;
+    font-size: 25px;
+    height: 150px;
+    text-align: center;
+    color: #706f6f;
+    bottom: 10px;
+    position: relative; }
+  .boton {
+    height: 40px;
+    width: 100PX;
+    border-radius: 0px;
+    border: 0px;
+    color: black;
+    font-size: 20px;
+    position: relative;
+    left: 302px; }
+  .box_form {
+    position: relative;
+    right: 200px; }
+  .boton_hover:hover {
+    cursor: pointer;
+    background-color: #dfdfdf; }
+  .boxComunidad {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center; }
+  .titulo_comunidad {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 70px;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+    position: relative;
+    bottom: 50px; }
+  .subtitulo_comunidad {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    bottom: 50px; }
+  .mail_comunidad {
+    width: 800px;
+    height: 30px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    position: relative;
+    bottom: 20px;
+    text-indent: 40px;
+    font-size: 15px; }
+  .mail_comunidad:hover {
+    cursor: pointer;
+    color: gray;
+    border: solid 2.5px gray;
+    transition: all .5s; }
+  .unirse_comunidad:hover {
+    cursor: pointer;
+    color: gray;
+    border: solid 2.5px gray;
+    transition: all .5s; }
+  .unirse_comunidad {
+    width: 805px;
+    height: 33px;
+    border-radius: 0px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    color: white;
+    position: relative;
+    bottom: 10px;
+    font-size: 20px; }
+  .form_comunidad {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 2px 2px 10px 1px black;
+    border: solid .8px black;
+    align-items: center;
+    height: 150px;
+    width: 830px;
+    justify-content: center; } }
