--- a/scss/_mobile-index.scss
+++ b/scss/_mobile-index.scss
@@ -13,18 +13,16 @@
     "contacto contacto"
     "comunidad comunidad";
     grid-template-columns: 50% 50%;
-    grid-template-rows: 40px 300px 200px 300px 200px 200px 400px 500px 500px 500px;
+    grid-template-rows: 100px 300px 200px 300px 200px 200px 400px 600px 300px;
 }
 
 .header{
     grid-area: header;
     background-color:#444444;
     display: flex;
-    justify-content:space-evenly;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    box-shadow: 2px 2px 10px 2px black;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .banerBox{
@@ -46,7 +44,6 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    box-shadow: 2px 2px 10px 2px black;
 }
 
 
@@ -105,11 +102,9 @@
     grid-area: nosotros;
     background-color: #171717;
     display:flex;
-    justify-content: center;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    box-shadow: 2px 2px 10px 2px black;
 }
 
 .imgNosotros{
@@ -118,33 +113,44 @@
 
 .boxContacto{
     grid-area: contacto;
+    background-color: #444444;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
 }
 
 .boxComunidad{
     grid-area: comunidad;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: black;
 }
 
 /*FIN GRIDS--------------------------------------------------------*/
 
 .logo{
-    height: 100px;
-    width: 100px;
+    height: 60px;
+    width: 60px;
     position: relative;
-    right: 40px;
-    top: 10px;
 }
 
-.boxnav{
+.box_nav{
     display: flex;
-    justify-content: space-around;
 }
 
 .box_nav li{
     list-style: none;
-    position: relative;
-    font-size: 15px;
+    font-size: 13px;
     font-family: 'Open Sans', sans-serif ;
     font-weight: bold;
+    padding: 0px 10px;
+    position: relative;
+    right: 20px;
+    bottom: 5px;
 }
 
 .box_nav li a{
@@ -160,7 +166,7 @@
     font-style: italic;
     -webkit-text-stroke: 2px black;
     position: relative;
-    top: 50px;
+    top: 20px;
 }
 
 .banerBox h2{
@@ -170,6 +176,8 @@
     font-weight: bold;
     font-style: italic;
     -webkit-text-stroke: 2px rgb(0, 0, 0);
+    position: relative;
+    bottom: 15px;
 }
 
 .icono{
@@ -203,8 +211,6 @@
 
 
 figcaption{
-    display:none; 
-    transition: all .5s;
     font-size: 20px;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -214,21 +220,8 @@ figcaption{
 }
 
 
-.boxSuplementos:hover > figcaption {
-    display:block;
-    transition: all .5s;
-    cursor: pointer;
-}
-
 .boxQuimica:hover{
     border: solid 3px #EEEEEE;
-}
-
-
-.boxQuimica:hover > figcaption {
-    display:block;
-    transition: all .5s;
-    cursor: pointer;
 }
 
 
@@ -236,12 +229,6 @@ figcaption{
     border: solid 3px #EEEEEE;
 }
 
-
-.boxPersonalizados:hover > figcaption {
-    display:block;
-    transition: all .5s;
-    cursor: pointer;
-}
 
 .titutlo_nosotros{
     color: rgb(255, 255, 255);
@@ -251,6 +238,7 @@ figcaption{
     bottom: 20px;
     font-family: 'Open Sans', sans-serif ;
     font-style: italic;
+    right: 60px;
 }
 
 
@@ -266,17 +254,128 @@ figcaption{
 }
 
 
+.box_textos_contacto{
+    position: relative;
+    height: 300px;
+    width: 200px;
+    right: 50px;
+}
+
+.text_contacto{
+    color: white;
+    font-size: 35px;
+    margin-bottom: 18px;
+    font-family:'Open Sans', sans-serif;
+    font-style: italic;
+}
+
+.text_contacto2{
+    color: white;
+    font-size: 15px;
+    width: 400px;
+    position: relative;
+    margin-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
+    width: 200px;
+}
+
+.text_contacto3{
+    color: white;
+    font-size: 15px;
+    width: 200px;
+    position: relative;
+    margin-bottom: 3px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.text_contacto4{
+    color: white;
+    font-size: 15px;
+    width: 200px;
+    font-family: 'Open Sans', sans-serif;
+}
 
 
+.input{
+    height: 20px;
+    width: 200px;
+    font-size: 15px;
+    text-align:center;
+    position: relative;
+    margin-bottom: 10px;
+    text-align: left;
+    text-indent: 20px;
+    top: 20px;
+}
+
+.textArea{
+    width: 202px;
+    font-size: 25px;
+    height: 75px;
+    text-align: center;
+    color: #706f6f;
+    bottom: 10px;
+    position: relative;
+    top: 20px;
+}
+
+.boton{
+    height: 20px;
+    width: 50px;
+    border-radius: 0px;
+    border: 0px;
+    color: black;
+    font-size: 10px;
+    position: relative;
+    top: 20px;
+    left: 1px;
+}
 
 
+.box_form{
+    position: relative;
+    right: 45px;
+}
 
+.titulo_comunidad{
+    font-family:'Open Sans', sans-serif ;
+    font-size: 30px;
+    font-weight: bold;
+    font-style:italic;
+    color: white;
+    position: relative;
+}
 
+.subtitulo_comunidad{
+    font-family:'Open Sans', sans-serif ;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    bottom: 30px;
+}
 
+.mail_comunidad{
+    width: 300px;
+    height: 30px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    position: relative;
+    bottom: 30px;
+    text-indent: 75px;
+    font-size: 15px;
+}
 
-
-
-
-
+.unirse_comunidad{
+    width: 309px;
+    height: 30px;
+    border-radius: 0px;
+    background-color: #1B1A17;
+    border: solid 2.5px white;
+    color: white;
+    position: relative;
+    bottom: 20px;
+    font-size: 20px;
+}
 
 }
