--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,13 @@
 @import "mobile-index";
 @import "desktop-index";
+@import "suplementos-desktop";
+@import "anabolicos-desktop";
+@import "anabolicos-mobile";
+@import "suplementos-mobile";
+@import "op-producto-desktop";
+@import "op-producto-mobile";
+@import "novedades-desktop";
+@import "novedades-mobile";
 
 
 
